added some classifications 2/16 commit 2

--- a/housing_predictions.ipynb
+++ b/housing_predictions.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,12 +140,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Land contour, utilities, LandSlope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "OverallQual and OverallCond are already on a numbered scale, all the others are not"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,10 +191,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       0\n",
+      "1       0\n",
+      "2       0\n",
+      "3       0\n",
+      "4       0\n",
+      "       ..\n",
+      "1455    0\n",
+      "1456    0\n",
+      "1457    0\n",
+      "1458    0\n",
+      "1459    0\n",
+      "Name: LandContour, Length: 1460, dtype: int32\n",
+      "0       0\n",
+      "1       0\n",
+      "2       0\n",
+      "3       0\n",
+      "4       0\n",
+      "       ..\n",
+      "1455    0\n",
+      "1456    0\n",
+      "1457    0\n",
+      "1458    0\n",
+      "1459    0\n",
+      "Name: LandContour, Length: 1460, dtype: int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tdata[\"LandContour\"])\n",
+    "Land_contour_dict = {\"Lvl\":4, \"Bnk\":3, \"HLS\":2, \"Low\": 1} #think about whether low should be 1 or 0\n",
+    "tdata[\"LandContour\"] = tdata[\"LandContour\"].map(Land_contour_dict).fillna(0).astype(int)\n",
+    "print(tdata[\"LandContour\"])\n",
+    "\n",
+    "Utilities_dict = {\"AllPub\":4,\"NoSewr\":3,\"NoSeWa\":2,\"ELO\":1}\n",
+    "tdata[\"Utilities\"] = tdata[\"Utilities\"].map(Utilities_dict).fillna(0).astype(int)\n",
+    "\n",
+    "slope_dict = {\"Gtl\":3,\"Mod\":2,\"Sev\":1}\n",
+    "tdata[\"LandSlope\"] = tdata[\"LandSlope\"].map(slope_dict).fillna(0).astype(int)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nominal Categories: MSSubClass, MSZoning, Street, Alley, LotShape, LandContour, Utilities, LotConfig, LandSlope, Neighborhood, Condition1, Condition2, BldgType, RoofStyle, RoofMatl"
+    "Nominal Categories: MSSubClass, MSZoning, Street, Alley, LotShape, Utilities, LotConfig, LandSlope, Neighborhood, Condition1, Condition2, BldgType, RoofStyle, RoofMatl"
    ]
   },
   {
@@ -195,33 +258,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Id  MSSubClass  MSZoning_0  MSZoning_1  MSZoning_2  LotFrontage  LotArea  \\\n",
-      "0   1          60           0           0           1         65.0     8450   \n",
-      "1   2          20           0           0           1         80.0     9600   \n",
-      "2   3          60           0           0           1         68.0    11250   \n",
-      "3   4          70           0           0           1         60.0     9550   \n",
-      "4   5          60           0           0           1         84.0    14260   \n",
+      "   Id  MSSubClass_0  MSSubClass_1  MSSubClass_2  MSSubClass_3  MSZoning_0  \\\n",
+      "0   1             0             0             0             1           0   \n",
+      "1   2             0             0             1             0           0   \n",
+      "2   3             0             0             0             1           0   \n",
+      "3   4             0             0             1             1           0   \n",
+      "4   5             0             0             0             1           0   \n",
       "\n",
-      "   Street_0  Street_1  Alley_0  ...  MoSold  YrSold  SaleType_0  SaleType_1  \\\n",
-      "0         0         1        1  ...       2    2008           0           0   \n",
-      "1         0         1        1  ...       5    2007           0           0   \n",
-      "2         0         1        1  ...       9    2008           0           0   \n",
-      "3         0         1        1  ...       2    2006           0           0   \n",
-      "4         0         1        1  ...      12    2008           0           0   \n",
+      "   MSZoning_1  MSZoning_2  LotFrontage  LotArea  ... MiscFeature MiscVal  \\\n",
+      "0           0           1         65.0     8450  ...         NaN       0   \n",
+      "1           0           1         80.0     9600  ...         NaN       0   \n",
+      "2           0           1         68.0    11250  ...         NaN       0   \n",
+      "3           0           1         60.0     9550  ...         NaN       0   \n",
+      "4           0           1         84.0    14260  ...         NaN       0   \n",
       "\n",
-      "   SaleType_2  SaleType_3  SaleCondition_0  SaleCondition_1  SaleCondition_2  \\\n",
-      "0           0           1                0                0                1   \n",
-      "1           0           1                0                0                1   \n",
-      "2           0           1                0                0                1   \n",
-      "3           0           1                0                1                0   \n",
-      "4           0           1                0                0                1   \n",
+      "  MoSold  YrSold SaleType_0 SaleType_1 SaleType_2  SaleType_3  SaleCondition  \\\n",
+      "0      2    2008          0          0          0           1         Normal   \n",
+      "1      5    2007          0          0          0           1         Normal   \n",
+      "2      9    2008          0          0          0           1         Normal   \n",
+      "3      2    2006          0          0          0           1        Abnorml   \n",
+      "4     12    2008          0          0          0           1         Normal   \n",
       "\n",
       "   SalePrice  \n",
       "0     208500  \n",
@@ -230,79 +293,23 @@
       "3     140000  \n",
       "4     250000  \n",
       "\n",
-      "[5 rows x 139 columns]\n"
+      "[5 rows x 112 columns]\n"
      ]
     }
    ],
    "source": [
     "Binary_encode_list = [\"MSSubClass\", \"MSZoning\", \"Neighborhood\",\"Condition1\",\"Condition2\", \"HouseStyle\", \"RoofMatl\", \"Exterior1st\", \"Exterior2nd\", \"SaleType\"]\n",
-    "Binary_encode_list_df = BinaryEncoder(Binary_encode_list).fit_transform(tdata)\n",
+    "tdata = BinaryEncoder(cols=Binary_encode_list).fit_transform(tdata)\n",
     "\n",
-    "print(Binary_encode_list_df.head())\n",
+    "print(tdata.head())\n",
     "# CHECK WORK HERE TOMORROW"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['Id', 'MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street',\n",
-      "       'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig',\n",
-      "       'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType',\n",
-      "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
-      "       'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType',\n",
-      "       'MasVnrArea', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual',\n",
-      "       'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1',\n",
-      "       'BsmtFinType2', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating',\n",
-      "       'HeatingQC', 'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF',\n",
-      "       'LowQualFinSF', 'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath',\n",
-      "       'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual',\n",
-      "       'TotRmsAbvGrd', 'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType',\n",
-      "       'GarageYrBlt', 'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual',\n",
-      "       'GarageCond', 'PavedDrive', 'WoodDeckSF', 'OpenPorchSF',\n",
-      "       'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea', 'PoolQC',\n",
-      "       'Fence', 'MiscFeature', 'MiscVal', 'MoSold', 'YrSold', 'SaleType',\n",
-      "       'SaleCondition', 'SalePrice'],\n",
-      "      dtype='object')\n",
-      "Index(['Id', 'MSSubClass', 'MSZoning_0', 'MSZoning_1', 'MSZoning_2',\n",
-      "       'LotFrontage', 'LotArea', 'Street_0', 'Street_1', 'Alley_0',\n",
-      "       ...\n",
-      "       'MoSold', 'YrSold', 'SaleType_0', 'SaleType_1', 'SaleType_2',\n",
-      "       'SaleType_3', 'SaleCondition_0', 'SaleCondition_1', 'SaleCondition_2',\n",
-      "       'SalePrice'],\n",
-      "      dtype='object', length=139)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'rows'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8752\\683207376.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBinary_encode_list_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBinary_encode_list_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5898\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5899\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5900\u001b[0m         ):\n\u001b[0;32m   5901\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5902\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'rows'"
-     ]
-    }
-   ],
-   "source": [
-    "print(tdata.columns)\n",
-    "print(Binary_encode_list_df.columns)\n",
-    "print(len(tdata.rows))\n",
-    "print(len(Binary_encode_list_df.rows))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One Hot Encoded:"
+    "One Hot Encoded: \"Street\", \"Alley\", \"LotShape\", \"LotConfig\", \"BldgType\", \"RoofStyle\", \"MasVnrType\", \"Foundation\", \"Heating\", \"Electrical\", \"GarageType\", \"PavedDrive\", \"MiscFeature\", \"SaleCondition\""
    ]
   },
   {
