one hot encoded some things

--- a/housing_predictions.ipynb
+++ b/housing_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,36 +192,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0       0\n",
-      "1       0\n",
-      "2       0\n",
-      "3       0\n",
-      "4       0\n",
+      "0       Lvl\n",
+      "1       Lvl\n",
+      "2       Lvl\n",
+      "3       Lvl\n",
+      "4       Lvl\n",
+      "       ... \n",
+      "1455    Lvl\n",
+      "1456    Lvl\n",
+      "1457    Lvl\n",
+      "1458    Lvl\n",
+      "1459    Lvl\n",
+      "Name: LandContour, Length: 1460, dtype: object\n",
+      "0       4\n",
+      "1       4\n",
+      "2       4\n",
+      "3       4\n",
+      "4       4\n",
       "       ..\n",
-      "1455    0\n",
-      "1456    0\n",
-      "1457    0\n",
-      "1458    0\n",
-      "1459    0\n",
-      "Name: LandContour, Length: 1460, dtype: int32\n",
-      "0       0\n",
-      "1       0\n",
-      "2       0\n",
-      "3       0\n",
-      "4       0\n",
-      "       ..\n",
-      "1455    0\n",
-      "1456    0\n",
-      "1457    0\n",
-      "1458    0\n",
-      "1459    0\n",
+      "1455    4\n",
+      "1456    4\n",
+      "1457    4\n",
+      "1458    4\n",
+      "1459    4\n",
       "Name: LandContour, Length: 1460, dtype: int32\n"
      ]
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -279,19 +279,19 @@
       "3           0           1         60.0     9550  ...         NaN       0   \n",
       "4           0           1         84.0    14260  ...         NaN       0   \n",
       "\n",
-      "  MoSold  YrSold SaleType_0 SaleType_1 SaleType_2  SaleType_3  SaleCondition  \\\n",
-      "0      2    2008          0          0          0           1         Normal   \n",
-      "1      5    2007          0          0          0           1         Normal   \n",
-      "2      9    2008          0          0          0           1         Normal   \n",
-      "3      2    2006          0          0          0           1        Abnorml   \n",
-      "4     12    2008          0          0          0           1         Normal   \n",
+      "  MoSold  YrSold  SaleType_0 SaleType_1  SaleType_2  SaleType_3  \\\n",
+      "0      2    2008           0          0           0           1   \n",
+      "1      5    2007           0          0           0           1   \n",
+      "2      9    2008           0          0           0           1   \n",
+      "3      2    2006           0          0           0           1   \n",
+      "4     12    2008           0          0           0           1   \n",
       "\n",
-      "   SalePrice  \n",
-      "0     208500  \n",
-      "1     181500  \n",
-      "2     223500  \n",
-      "3     140000  \n",
-      "4     250000  \n",
+      "   SaleCondition  SalePrice  \n",
+      "0         Normal     208500  \n",
+      "1         Normal     181500  \n",
+      "2         Normal     223500  \n",
+      "3        Abnorml     140000  \n",
+      "4         Normal     250000  \n",
       "\n",
       "[5 rows x 112 columns]\n"
      ]
@@ -313,11 +313,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figure out what is wrong here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Street has repeated values as a possible state\n",
+      "Alley has repeated values as a possible state\n",
+      "LotShape has repeated values as a possible state\n",
+      "LotConfig has repeated values as a possible state\n",
+      "BldgType has repeated values as a possible state\n",
+      "RoofStyle has repeated values as a possible state\n",
+      "MasVnrType has repeated values as a possible state\n",
+      "Foundation has repeated values as a possible state\n",
+      "Heating has repeated values as a possible state\n",
+      "Electrical has repeated values as a possible state\n",
+      "GarageType has repeated values as a possible state\n",
+      "PavedDrive has repeated values as a possible state\n",
+      "MiscFeature has repeated values as a possible state\n",
+      "SaleCondition has repeated values as a possible state\n"
+     ]
+    }
+   ],
+   "source": [
+    "one_hot_encode_list = [\"Street\", \"Alley\", \"LotShape\", \"LotConfig\", \"BldgType\", \"RoofStyle\", \"MasVnrType\", \"Foundation\", \"Heating\", \"Electrical\", \"GarageType\", \"PavedDrive\", \"MiscFeature\", \"SaleCondition\"]\n",
+    "num = 1\n",
+    "for item in one_hot_encode_list:\n",
+    "    try:\n",
+    "        one_hot_df = pd.get_dummies(tdata[item], prefix=\"dummy\"+str(num), dtype=int)\n",
+    "        tdata = tdata.join(one_hot_df)\n",
+    "        num+=1\n",
+    "    except ValueError:\n",
+    "        print(item + \" has repeated values as a possible state\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(tdata[\"dummy_Grvl\"])"
+   ]
   },
   {
    "cell_type": "markdown",
