--- a/housing_predictions.ipynb
+++ b/housing_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,49 +321,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Street has repeated values as a possible state\n",
-      "Alley has repeated values as a possible state\n",
-      "LotShape has repeated values as a possible state\n",
-      "LotConfig has repeated values as a possible state\n",
-      "BldgType has repeated values as a possible state\n",
-      "RoofStyle has repeated values as a possible state\n",
-      "MasVnrType has repeated values as a possible state\n",
-      "Foundation has repeated values as a possible state\n",
-      "Heating has repeated values as a possible state\n",
-      "Electrical has repeated values as a possible state\n",
-      "GarageType has repeated values as a possible state\n",
-      "PavedDrive has repeated values as a possible state\n",
-      "MiscFeature has repeated values as a possible state\n",
-      "SaleCondition has repeated values as a possible state\n"
-     ]
-    }
-   ],
-   "source": [
-    "one_hot_encode_list = [\"Street\", \"Alley\", \"LotShape\", \"LotConfig\", \"BldgType\", \"RoofStyle\", \"MasVnrType\", \"Foundation\", \"Heating\", \"Electrical\", \"GarageType\", \"PavedDrive\", \"MiscFeature\", \"SaleCondition\"]\n",
-    "num = 1\n",
-    "for item in one_hot_encode_list:\n",
-    "    try:\n",
-    "        one_hot_df = pd.get_dummies(tdata[item], prefix=\"dummy\"+str(num), dtype=int)\n",
-    "        tdata = tdata.join(one_hot_df)\n",
-    "        num+=1\n",
-    "    except ValueError:\n",
-    "        print(item + \" has repeated values as a possible state\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(tdata[\"dummy_Grvl\"])"
+    "one_hot_encode_list = [\"Street\", \"Alley\", \"LotShape\", \"LotConfig\", \"BldgType\", \"RoofStyle\", \"MasVnrType\", \"Foundation\", \"Heating\", \"Electrical\", \"GarageType\", \"PavedDrive\", \"MiscFeature\", \"SaleCondition\"]\n",
+    "\n",
+    "for item in one_hot_encode_list:\n",
+    "    try:\n",
+    "        one_hot_df = pd.get_dummies(tdata[item], prefix=item, dtype=int)\n",
+    "        tdata = tdata.join(one_hot_df)\n",
+    "    except ValueError:\n",
+    "        print(item + \" has repeated values as a possible state\")\n"
    ]
   },
   {
